# weather-text

./: Cargo.toml  README.md
src/: cli.rs  coordinates.rs  credentials.rs  main.rs  weather.rs
src/credentials/: mod.rs
src/weather/: mod.rs
