[package]
name = "weather-text"
version = "0.1.0"
edition = "2021"
description = "`weather-text` requests the current weather and presents it as a consise string. The intended use case is as a wibar widget.\nZIP code and API key should be stored on separate lines in `~/.weather-text/key`, or an alternate path should be provided using the `--credentials` flag."
authors = ["Joe Pigott <pigroy@pigroy.xyz>"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
reqwest = { version = "0.12.3", features = ["json"]}
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"]}
