[package]
name = "weather-text"
version = "0.1.1"
edition = "2021"
description = "`weather-text` fetches the current weather and presents it as a concise string. The intended use case is as a wibar widget.\nCountry code, ZIP code, and API key should be stored on separate lines in `~/.weather-text/key`, or an alternate path should be provided using the `--credentials` flag."
authors = ["Joe Pigott <pigroy@pigroy.xyz>"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"]}
serde = "1.0.217"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"]}
